--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -44,10 +44,7 @@ services:
       context: ./backend/auth_service
       dockerfile: Dockerfile
     container_name: auth-service
-    command: >
-      sh -c "python manage.py makemigrations &&
-               python manage.py migrate &&
-               gunicorn auth_service.wsgi:application --bind 0.0.0.0:8001 --workers=1 --threads=4"
+    command: gunicorn auth_service.wsgi:application --bind 0.0.0.0:8001 --workers=1 --threads=4
     env_file:
       - .env
     restart: unless-stopped
@@ -95,10 +92,7 @@ services:
       context: ./backend/tournament-service
       dockerfile: Dockerfile
     container_name: tournament-service
-    command: >
-      sh -c "python manage.py makemigrations &&
-               python manage.py migrate &&
-               gunicorn tournament.wsgi:application --bind 0.0.0.0:8003 --workers=1 --threads=4"
+    command: gunicorn tournament.wsgi:application --bind 0.0.0.0:8003 --workers=1 --threads=4
     env_file:
       - .env
     restart: unless-stopped
@@ -144,10 +138,7 @@ services:
       context: ./backend/history
       dockerfile: Dockerfile
     container_name: history-service
-    command: >
-      sh -c "python manage.py makemigrations &&
-               python manage.py migrate &&
-               gunicorn history_service.wsgi:application --bind 0.0.0.0:8002 --workers=1 --threads=4"
+    command: gunicorn history_service.wsgi:application --bind 0.0.0.0:8002 --workers=1 --threads=4
     env_file:
       - .env
     restart: unless-stopped
