--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -35,7 +35,7 @@ services:
       retries: 3
       start_period: 20s
     networks:
-      - internal
+      - mini_transcendence_internal
 
   auth-service:
     image: auth-service
@@ -61,7 +61,7 @@ services:
       auth_db:
         condition: service_healthy
     networks:
-      - internal
+      - mini_transcendence_internal
 
   auth_db:
     image: postgres:17-alpine3.22
@@ -82,7 +82,7 @@ services:
       retries: 3
       start_period: 20s
     networks:
-      - internal
+      - mini_transcendence_internal
 
 
   tournament-service:
@@ -108,7 +108,7 @@ services:
       tournament_db:
         condition: service_healthy
     networks:
-      - internal
+      - mini_transcendence_internal
 
   tournament_db:
     image: postgres:17-alpine3.22
@@ -129,7 +129,7 @@ services:
       retries: 3
       start_period: 20s
     networks:
-      - internal
+      - mini_transcendence_internal
 
   history-service:
     image: history-service
@@ -154,7 +154,7 @@ services:
       history_db:
         condition: service_healthy
     networks:
-      - internal
+      - mini_transcendence_internal
 
   history_db:
     image: postgres:17-alpine3.22
@@ -175,7 +175,7 @@ services:
       retries: 3
       start_period: 20s
     networks:
-      - internal
+      - mini_transcendence_internal
   
   # cloudflared:
   #   image: cloudflare/cloudflared:2025.11.1
@@ -183,7 +183,7 @@ services:
   #   restart: unless-stopped
   #   command: tunnel --no-autoupdate run --token ${CLOUDFLARE_TUNNEL_TOKEN}
   #   networks:
-  #     - internal
+  #     - mini_transcendence_internal
 
   #monitoring
   grafana:
@@ -208,7 +208,7 @@ services:
       retries: 5
       start_period: 30s
     networks:
-      - internal
+      - mini_transcendence_internal
 
   prometheus:
     image: prom/prometheus:v3.8.1
@@ -231,7 +231,7 @@ services:
       retries: 5
       start_period: 30s
     networks:
-      - internal
+      - mini_transcendence_internal
 
   node-exporter:
     image: prom/node-exporter:v1.10.2
@@ -250,7 +250,7 @@ services:
       start_period: 10s
       timeout: 10s
     networks:
-      - internal
+      - mini_transcendence_internal
 
   alertmanager:
     image: prom/alertmanager:v0.30
@@ -272,7 +272,7 @@ services:
       start_period: 10s
       timeout: 10s
     networks:
-      - internal
+      - mini_transcendence_internal
 
   nginx-prometheus-exporter:
     image: nginx/nginx-prometheus-exporter:1.4
@@ -284,7 +284,7 @@ services:
       "--nginx.scrape-uri", "http://proxy:8080/stub_status",
     ]
     networks:
-      - internal
+      - mini_transcendence_internal
 
   postgres-exporter-auth-db:
     image: prometheuscommunity/postgres-exporter:v0.16.0
@@ -298,7 +298,7 @@ services:
       auth_db:
         condition: service_healthy
     networks:
-      - internal
+      - mini_transcendence_internal
 
   postgres-exporter-tournament-db:
     image: prometheuscommunity/postgres-exporter:v0.16.0
@@ -314,7 +314,7 @@ services:
       tournament_db:
         condition: service_healthy
     networks:
-      - internal
+      - mini_transcendence_internal
 
   postgres-exporter-history-db:
     image: prometheuscommunity/postgres-exporter:v0.16.0
@@ -330,11 +330,11 @@ services:
       history_db:
         condition: service_healthy
     networks:
-      - internal
+      - mini_transcendence_internal
 
 
 networks:
-  internal:
+  mini_transcendence_internal:
     driver: bridge
 
 volumes:
