fix: update Content Security Policy to include additional connect sources

--- a/proxy/conf.d/gateway.conf
+++ b/proxy/conf.d/gateway.conf
@@ -63,18 +63,18 @@ server {
 	add_header X-Content-Type-Options "nosniff" always;
 	add_header X-XSS-Protection "1; mode=block" always;
 	add_header Referrer-Policy "strict-origin-when-cross-origin" always;
-	add_header Content-Security-Policy "
-		default-src 'self';
-		worker-src 'self' blob:;
-		connect-src 'self' https://threejs.org https://grafana.com https://feeds.elastic.co https://telemetry.elastic.co;
-		script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.jsdelivr.net;
-		style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://fonts.googleapis.com;
-		font-src 'self' https://fonts.gstatic.com https://cdn.jsdelivr.net https://threejs.org;
-		img-src 'self' data: https://transcendence.alematta.com/media/ https://www.transcendence.alematta.com/media/ https://grafana.com;
-		base-uri 'self';
-		form-action 'self';
-		manifest-src 'self';
-	" always;
+    add_header Content-Security-Policy "
+        default-src 'self';
+        worker-src 'self' blob:;
+        connect-src 'self' https://threejs.org https://cdn.jsdelivr.net https://grafana.com https://feeds.elastic.co https://telemetry.elastic.co;
+        script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.jsdelivr.net;
+        style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://fonts.googleapis.com;
+        font-src 'self' https://fonts.gstatic.com https://cdn.jsdelivr.net https://threejs.org;
+        img-src 'self' data: https://transcendence.alematta.com/media/ https://www.transcendence.alematta.com/media/ https://grafana.com;
+        base-uri 'self';
+        form-action 'self';
+        manifest-src 'self';
+    " always;
 
 		#img-src 'self' data: http://localhost/media/ https://localhost/media/ https://grafana.com;
 
